chore: minor style fix for modal so status box is still visible

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,7 +143,7 @@ button:active {
     flex-direction: column;
     gap: 1rem;
     background-color: #fff;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 1% auto; /* 1% from the top and centered */
     padding: 20px;
     border-radius: 8px;
     width: 80%;
